# vortex_docs

./: 404.html  CODEOWNERS  README.md  index.html  mkdocs.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: mkdocs.yaml
arquitetura/resumo/: index.html
docs/: index.md
docs/arquitetura/: resumo.md
docs/vortex_api/: index.md
docs/vortex_collector/: index.md
docs/vortex_comercial/: index.md
docs/vortex_server/: index.md
proposta_comercial/: index.html
search/: search_index.json
vortex_api/: index.html
vortex_collector/: index.html
vortex_server/: index.html
